# banto

./: .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.claude/: launch.json
.github/workflows/: ci.yml  deploy-demo.yml  tauri-check.yml  template-acceptance.yml
apps/admin-template/: package.json
apps/admin-template/core/: Cargo.toml
apps/admin-template/core/migrations/: 0002_settings.sql  0004_user_roles.sql
apps/admin-template/core/src/: assets.rs  events.rs  items.rs  lib.rs  rest.rs  settings.rs  users.rs
apps/admin-template/src/: app.css
apps/admin-template/src-tauri/: tauri.conf.json
apps/admin-template/src-tauri/src/: lib.rs
apps/admin-template/src/lib/: navigation.ts  permissions.ts  session.svelte.ts
crates/banto-core/src/: error.rs  params.rs
crates/banto-server/: Cargo.toml
crates/banto-server/src/: auth.rs  csrf.rs  events.rs  lib.rs  response.rs  server.rs  static_files.rs
crates/banto-storage/src/: lib.rs  postgres.rs
docs/: attachments-plan.md  conventions.md  handoff-2026-07-22.md  improvement-plan-2026-07.md  improvements.md  industrial-plan.md  maintainability-review-2026-07.md  publishing.md  remaining-work-2026-07-23.md  report-plan.md  roadmap.md  template-scope.md  ui-framework-spec.md  visual-refresh-plan.md
docs/recipes/: add-resource.md
e2e/: playwright.config.ts
e2e/tests/: smoke.spec.ts
scripts/: rename.mjs  rename.test.mjs  scaffold.mjs  verify-architecture.mjs
scripts/lib/: template-edit.mjs
(+35 files in other folders)
