[package]
name = "banto-server"
description = "Banto server: embedded axum server for LAN browser access (M6)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
banto-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "time",
  "signal",
  "io-util",
] }
tower = { workspace = true, features = ["util"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
if-addrs = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
